# humid

./: .clang-format  CMakeLists.txt  Makefile  README.md
cmake/toolchain/: armhf-linux.cmake
software/: CMakeLists.txt
software/humid/: CMakeLists.txt  main.cpp
software/humid/modules/lcd/: alphanumeric_display.cpp  alphanumeric_display.hpp  alphanumeric_i2c_driver.cpp  alphanumeric_i2c_driver.hpp
software/humid/modules/sensors/: pi_dht_read.h
software/lib/utils/: CMakeLists.txt
software/lib/utils/include/utils/: bit_utils.hpp  quit_handler.hpp
software/lib/utils/src/: quit_handler.cpp
